# silero-vad-rust-ort

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  realtime_render_client.py  render.yaml
src/: main.rs
